Job Events collapse/expand now handled using a filter on ng-repeat and setting 'show' attribute in job_events data set. No longer reading child rows from api on expand and throwing them away on collapse. New method is much faster. Added formatJSON() routine back in to transform relevant event_data bits into html form elments and display in list.

--- a/awx/ui/static/css/ansible-ui.css
+++ b/awx/ui/static/css/ansible-ui.css
@@ -370,6 +370,10 @@
     color: #5bb75b;
  }
 
+ .job-changed {
+    color: #FF9900;
+ }
+
  .job-detail-status {
     font-size: 15px;
     font-weight: bold;
